# RAVE

./: Dockerfile  README.md  docker-compose.yaml
rave/: CMakeLists.txt  package.xml  setup.py
rave/config/: params.yaml
rave/launch/: run.launch  test.launch
rave/nodes/: estimate_velocity.py
rave/src/rave/: helper.py  inlier_estimation.py  norm.py  outlier_rejection.py
