<?xml version="1.0"?>
<package format="2">
  <name>rave</name>
  <version>1.0.1</version>
  <description>The radar velocity estimation package - rave </description>

  <maintainer email="vlaho-josip.stironja@fer.unizg.hr">Vlaho-Josip Štironja</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
